--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,5 +1,5 @@
 /* gogle fonts import */
-@import url("https://fonts.googleapis.com/css2?family=Cardo&family=Fauna+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Fauna+One&family=Oswald:wght@300;400;700&display=swap");
 
 /* import slide for image carousel and slider */
 @import "@splidejs/splide/dist/css/themes/splide-default.min.css";
