--- a/src/Styles/BannerSlider.css
+++ b/src/Styles/BannerSlider.css
@@ -1,10 +1,10 @@
-.slide__wrapper {
-  padding: 0.7rem;
-  border: 1px solid red;
-}
 .slide__item {
-  border: 1px solid red;
-  padding: 0.8rem;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  background: #fff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 10px;
+
   text-align: center;
 }
 
@@ -23,13 +23,17 @@
 }
 
 button.rent__home {
-  padding: 0.5rem;
-  border: 1px solid #20c063;
-  border-radius: 15px;
+  padding: 0.5rem 0.8rem;
+  border: 2px solid #20c063;
+  border-radius: 12px;
   background: #fff;
+  margin-top: 1rem;
 }
 
 button.rent__home > a {
+  font-family: var(--room__regular);
   color: #20c063;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-transform: capitalize;
 }
