--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -1,9 +1,48 @@
+/* hero background image and search input*/
 .hero {
   width: 100%;
   height: 55vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-image: url(../images/hero-img_640px.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+}
+
+.searchInput__wrapper {
+  background: var(--white);
+  width: 85%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 0.312rem;
+}
+
+.searchInput__wrapper > input {
+  flex: 1;
+  width: 85%;
+  padding: 1.25rem;
+  background: var(--white);
+}
+
+.searchInput__wrapper > button {
+  width: 15%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--orange__color);
+  padding: 1rem;
+  /* padding-top: 0.885rem; */
+}
+
+/* some media queris configuration */
+@media screen and (min-width: 640px) {
+  .hero {
+    background-image: url(../images/hero-original2.jpg);
+  }
 }
