modified category component

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -9,6 +9,7 @@
   --room__regular: "Fauna One", serif;
   --heading: "Oswald", sans-serif;
   --orange__color: rgb(243, 108, 74);
+  --red__color: rgb(182, 46, 46);
   --brand__color: #20c063;
   --roboto: "Roboto", sans-serif;
   --white: #fff;
