completed category components

--- a/src/Styles/categories.css
+++ b/src/Styles/categories.css
@@ -1,6 +1,7 @@
 .categories {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
   background: rgb(241, 239, 239);
