--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -8,8 +8,8 @@
   --banner__regular: "Cardo", serif;
   --room__regular: "Fauna One", serif;
   --heading: "Oswald", sans-serif;
-  --orange__color: rgb(243, 108, 74);
-  --red__color: rgb(182, 46, 46);
+  --orange__brand: rgb(243, 108, 74);
+  --red__brand: rgb(218, 8, 8);
   --brand__color: #20c063;
   --roboto: "Roboto", sans-serif;
   --white: #fff;
