--- a/src/Styles/category.css
+++ b/src/Styles/category.css
@@ -1,18 +1,25 @@
 .category {
-  width: 115px;
-  height: 115px;
+  /* size */
+  width: 33.333%;
+  height: 130px;
+  /* appearance */
+  font-size: 0.875rem;
+  text-transform: capitalize;
+  color: #000;
   background: #f8f8f8;
+  /* positioning */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0.25rem;
-  margin-right: 0.25rem;
+  text-align: center;
+  /* border */
+  border: 2px solid rgb(241, 239, 239);
 }
 
 .icon__wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   width: 70px;
   height: 50px;
@@ -20,8 +27,5 @@
 }
 
 .title {
-  font-size: 0.8125rem;
-  text-align: center;
-  text-transform: capitalize;
   padding-top: 0.5rem;
 }
