--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -1,19 +1,18 @@
 /* gogle fonts import */
-@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Fauna+One&family=Oswald:wght@300;400;700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,700;1,400&family=Fauna+One&family=Noto+Serif:wght@400;700&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 
 /* variable declarartion */
 :root {
   --banner__regular: "Cardo", serif;
+  --banner-regular-two: "Noto Serif", serif;
   --room__regular: "Fauna One", serif;
   --heading: "Oswald", sans-serif;
   --orange__brand: rgb(243, 108, 74);
   --red__brand: rgb(218, 8, 8);
   --brand__color: #20c063;
-  --roboto: "Roboto", sans-serif;
   --white: #fff;
   --slide__color: #f9f9fb;
+  --small__size: 0.875rem;
 }
 
 /* set html root font size and set overflow-x */
