--- a/src/Styles/room.css
+++ b/src/Styles/room.css
@@ -12,6 +12,7 @@
   width: 100%;
   height: 70%;
   overflow: hidden;
+  position: relative;
 }
 
 .image__container img {
@@ -19,6 +20,28 @@
   min-height: 100%;
   min-width: 100%;
   max-height: 100%;
+}
+
+.no__of__pictures {
+  /* size */
+  width: 15%;
+  height: 15%;
+  /* appearance */
+  font-family: var(--banner-regular-two);
+  font-size: 0.75rem;
+  color: var(--white);
+  background: rgba(0, 0, 0, 0.4);
+  border-top-right-radius: 5px;
+  /* position */
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  /* center child item */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* z-index */
+  z-index: 100;
 }
 
 .room__details {
