updated home section

--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -1,6 +1,11 @@
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #20c063;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000;
 }
