--- a/src/Styles/category.css
+++ b/src/Styles/category.css
@@ -15,7 +15,7 @@
   align-items: center;
   text-align: center;
   /* border */
-  border: 2px solid var(--gray);
+  border: 2px solid rgb(226, 225, 225);
 }
 
 .icon__wrapper {
