--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -1,5 +1,6 @@
 /* hero background image and search input*/
 .hero {
+  margin-top: 55px;
   width: 100%;
   height: 55vh;
   display: flex;
@@ -17,7 +18,7 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
   cursor: pointer;
   border-radius: 0.312rem;
 }
@@ -25,13 +26,14 @@
 .searchInput__wrapper > input {
   flex: 1;
   width: 85%;
-  padding: 1.25rem;
+  padding: 1rem;
   background: var(--white);
+  font-family: var(--banner-regular-two);
+  font-size: 0.8rem;
 }
 
 .searchInput__wrapper > button {
   width: 15%;
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
