--- a/src/Styles/pageHeader.css
+++ b/src/Styles/pageHeader.css
@@ -1,4 +1,5 @@
 .page__header {
+  background: var(--white);
   width: 100%;
   padding: 0.625rem;
   position: fixed;
@@ -9,6 +10,7 @@
   align-items: center;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   font-family: var(--heading);
+  z-index: 10000000;
 }
 .title__left {
   display: flex;
