--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -16,6 +16,8 @@
   --black-color: #000;
   --slide__color: #f9f9fb;
   --gray: rgb(241, 239, 239);
+  --gray__font__color: #7c7c80;
+
   /* font size */
   --small__size: 0.875rem;
   --medium__header: 1.25rem;
