completed building the post add components and page. post add now working perfect

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -16,7 +16,7 @@
   --black-color: #000;
   --slide__color: #f9f9fb;
   --gray: rgb(241, 239, 239);
-  --gray__font__color: #7c7c80;
+  --gray__font__color: #6f6f75;
 
   /* font size */
   --small__size: 0.875rem;
