--- a/src/Styles/SingleRoom.css
+++ b/src/Styles/SingleRoom.css
@@ -1,7 +1,7 @@
 .single__room__wrapper {
-  border: 1px solid red;
+  border: 0.5px solid rgb(171, 169, 169);
   overflow: hidden;
-  margin: 0.35rem;
+  margin-bottom: 1rem;
   height: 150px;
   width: 100%;
   align-items: center;
@@ -9,6 +9,7 @@
   align-items: flex-start;
   flex-direction: column;
   font-family: var(--room__description);
+  border-radius: 5px;
 }
 
 .single_room__highlight {
@@ -24,7 +25,6 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-right: 5px;
 }
 
 .single__room__image__container img {
@@ -35,37 +35,44 @@
 }
 
 .Single__room__description {
-  border: 2px solid rgb(115, 170, 115);
   width: 65%;
-  /* font-family: var(--banner-regular); */
-  /* font-family: var(----room__description); */
   font-size: var(--small__size);
   text-align: left;
   color: var(--black-color);
   text-transform: capitalize;
+  padding-left: 0.313rem;
+  border-bottom: 0.5px solid rgb(171, 169, 169);
 }
 
 .single__room__title {
-  font-size: 1.125em;
+  font-size: 1rem;
   text-overflow: ellipsis;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
 }
 
 .single__room__price {
-  margin: 0.3125rem 0;
+  margin: 2px 0;
   color: var(--brand__color);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 800;
-  letter-spacing: 1px;
+  letter-spacing: 0.02rem;
 }
 
 .single__room__price span {
   text-transform: none;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
-.room__contact__detail {
-  height: 25%;
+.single__room__location {
+  font-size: 0.8rem;
+  color: rgb(134, 134, 134);
+  margin-top: 0.5rem;
+  display: flex;
+  align-items: center;
+  font-family: var(--banner-regular-two);
 }
 
 .single__room__facilities {
@@ -74,4 +81,21 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+.room__contact__detail {
+  height: 25%;
+}
+
+.room__contact__detail {
+  border-bottom: 2px solid red;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.room__contact__detail button {
+  justify-self: start;
+  border-right: 1px solid red;
+  text-align: left;
+  width: 50%;
 }
