--- a/src/Styles/facility.css
+++ b/src/Styles/facility.css
@@ -5,7 +5,7 @@
   margin: 1px;
   padding: 1px 3px;
   color: var(--gray__font__color);
-  border: 1px solid rgb(196, 194, 194);
+  border: 0.5px solid rgb(189, 189, 189);
   border-radius: 3px;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
 }
