--- a/src/Styles/SingleRoom.css
+++ b/src/Styles/SingleRoom.css
@@ -10,6 +10,7 @@
   font-family: var(--room__description);
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  background-color: var(--gray);
 }
 
 .single_room__highlight {
@@ -64,10 +65,11 @@
   text-transform: capitalize;
   padding-left: 0.313rem;
   border-bottom: 0.5px solid rgb(171, 169, 169);
+  /* background-color: #fff; */
 }
 
 .single__room__title {
-  font-size: 1rem;
+  font-size: 0.955rem;
   text-overflow: ellipsis;
   display: inline-block;
   position: relative;
