--- a/src/Styles/SingleRoom.css
+++ b/src/Styles/SingleRoom.css
@@ -11,6 +11,7 @@
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background-color: var(--gray);
+  border-top: 1px solid rgb(171, 169, 169);
 }
 
 .single_room__highlight {
