--- a/src/Styles/propertDetailFacilities.css
+++ b/src/Styles/propertDetailFacilities.css
@@ -1,19 +1,24 @@
 .property__detail__facilities {
+  color: rgb(69, 68, 68);
   background: rgb(251, 250, 250);
-  margin-top: 20px;
-  padding: 20px 15px;
+  margin-top: 1.25rem;
+  padding: 1.25rem 0.938rem 0.006rem;
 }
 
 .property__detail__facilities h6 {
-  font-size: 18px;
+  font-size: 1.05rem;
 }
 
 .property__detail__facilities li {
-  font-family: var(--banner__regular);
-  font-weight: 200;
   display: flex;
   align-items: center;
-  font-size: 20px;
-  color: rgb(66, 66, 66);
-  margin-block: 20px;
+  font-size: 1rem;
+  color: rgb(100, 94, 94);
+  margin-block: 1.25rem;
+  letter-spacing: -1px;
+  text-transform: capitalize;
+}
+
+.property__detail__facilities li p {
+  margin-left: 0.125rem;
 }
