--- a/src/Styles/PropertyConditionHighlight.css
+++ b/src/Styles/PropertyConditionHighlight.css
@@ -1,21 +1,19 @@
 .property__condition__highlight {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 20px;
+  margin-top: 15px;
   background: rgb(251, 250, 250);
-  padding: 20px 0;
+  padding: 10px 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .property__condition__highlight p {
-  border: 1px solid var(--brand__color);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border: 0.5px solid var(--brand__color);
   letter-spacing: -0.5px;
-  font-size: 15px;
-  font-weight: 500;
-  padding: 6px 4px;
-  border-radius: 8px;
+  font-size: 0.813rem;
+  padding: 0.375rem 0.5rem;
+  border-radius: 5px;
   background: rgb(244, 241, 241);
-  color: rgb(101, 100, 100);
+  color: rgb(57, 56, 56);
   text-transform: capitalize;
 }
