--- a/src/Styles/propertDetailFacilities.css
+++ b/src/Styles/propertDetailFacilities.css
@@ -1,21 +1,22 @@
 .property__detail__facilities {
-  color: rgb(69, 68, 68);
+  color: rgb(5, 1, 1);
   background: rgb(251, 250, 250);
   margin-top: 1.25rem;
   padding: 1.25rem 0.938rem 0.006rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .property__detail__facilities h6 {
-  font-size: 1.05rem;
+  font-size: 1rem;
 }
 
 .property__detail__facilities li {
   display: flex;
   align-items: center;
-  font-size: 1rem;
-  color: rgb(100, 94, 94);
-  margin-block: 1.25rem;
-  letter-spacing: -1px;
+  font-size: 0.813rem;
+
+  margin-block: 0.5rem;
+  letter-spacing: -0.5px;
   text-transform: capitalize;
 }
 
