--- a/src/Styles/PropertyDetailDescription.css
+++ b/src/Styles/PropertyDetailDescription.css
@@ -13,16 +13,32 @@
   letter-spacing: -0.031ren;
 }
 
+.price__and__bookmark {
+  display: flex;
+  align-items: center;
+
+  /* padding: 0 20px; */
+  /* justify-content: space-between; */
+}
+
+.price__and__bookmark button {
+  color: #20c063;
+  margin-right: 0.3125rem;
+  padding: 5px 10px;
+  background: rgb(251, 250, 250);
+}
+
 .room__detail_description h5 {
   font-size: 1.125rem;
   color: var(--brand__color);
-  margin-bottom: 0.625rem;
+  /* margin-bottom: 0.625rem; */
+  flex: 1;
 }
 
 .roomdetail__location {
   font-size: 1rem;
   color: rgb(117, 115, 115);
-  margin-top: 0.5rem;
+  /* margin-top: 0.5rem; */
   display: flex;
   align-items: center;
   margin-bottom: 20px;
