--- a/src/Styles/PropertyDetailDescription.css
+++ b/src/Styles/PropertyDetailDescription.css
@@ -16,6 +16,7 @@
 .price__and__bookmark {
   display: flex;
   align-items: center;
+  padding-right: 0.938rem;
 
   /* padding: 0 20px; */
   /* justify-content: space-between; */
@@ -25,13 +26,14 @@
   color: #20c063;
   margin-right: 0.3125rem;
   padding: 5px 10px;
-  background-color: #20c063;
+  background: rgb(251, 250, 250);
   border-radius: 50%;
   width: 35px;
   height: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .room__detail_description h5 {
