--- a/src/Styles/allProperties.css
+++ b/src/Styles/allProperties.css
@@ -42,6 +42,8 @@
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
   border-radius: 5px;
+  padding: 0 30px;
+  margin-bottom: 10px;
 }
 .filter__price p:first-child {
   font-size: 0.9rem;
