--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -55,3 +55,16 @@ li {
 .page__background {
   margin-bottom: 3.125rem;
 }
+
+@media only screen and (min-width: 480px) {
+  #root {
+    display: none;
+  }
+  .mediaQuery {
+  }
+}
+@media only screen and (max-width: 480px) {
+  .mediaQuery {
+    display: none;
+  }
+}
