--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -58,13 +58,15 @@ li {
 
 @media only screen and (min-width: 480px) {
   #root {
+    visibility: hidden;
     display: none;
-  }
-  .mediaQuery {
+    z-index: 0;
   }
 }
 @media only screen and (max-width: 480px) {
   .mediaQuery {
+    visibility: hidden;
     display: none;
+    z-index: 0;
   }
 }
