--- a/src/Styles/LoginForm.css
+++ b/src/Styles/LoginForm.css
@@ -10,8 +10,8 @@
 .register__form__article {
   padding: 1.25rem;
   border-radius: 5px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 strong {
