--- a/src/Styles/LoginForm.css
+++ b/src/Styles/LoginForm.css
@@ -34,7 +34,7 @@ strong {
   font-size: 24px;
   line-height: 80px;
 }
-p {
+.welcome__msg {
   margin-top: 0.625rem;
   font-family: "Inter";
   font-style: normal;
