--- a/src/Styles/ProfileDetails.css
+++ b/src/Styles/ProfileDetails.css
@@ -1,5 +1,5 @@
 .user__profile {
-  border: 1px solid red;
+  margin-bottom: 50px;
 }
 
 .profile__img__envelope {
@@ -16,7 +16,32 @@
   max-width: 100%;
 }
 
-.user__profile p,
+.user__details {
+  /* margin: 0 20px; */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
+    rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+.user__profile p {
+  border-bottom: 1px solid rgb(210, 207, 207);
+  padding: 16px 10px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  font-family: var(--banner__regular);
+}
+
+.user__profile p span {
+  display: inline-block;
+  text-align: left;
+  width: 100%;
+  color: var(--brand__color);
+}
+
 .user__profile button {
-  border-bottom: 1px solid red;
+  width: 100%;
+  background: var(--brand__color);
+  color: white;
+}
+.user__profile button:hover {
+  background: var(--brand__color);
 }
