--- a/src/Styles/ProfileDetails.css
+++ b/src/Styles/ProfileDetails.css
@@ -20,9 +20,10 @@
   /* margin: 0 20px; */
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
     rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+  background: rgb(239, 237, 237);
 }
 .user__profile p {
-  border-bottom: 1px solid rgb(210, 207, 207);
+  border-bottom: 1px solid rgb(227, 223, 223);
   padding: 16px 10px;
   display: flex;
   justify-content: space-between;
