--- a/src/Styles/featuredRoom.css
+++ b/src/Styles/featuredRoom.css
@@ -24,3 +24,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .featured__rooms h3 {
+    font-size: 1.75rem;
+    text-transform: capitalize;
+  }
+}
