--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -1,5 +1,6 @@
 .header {
   width: 100%;
+  height: 65px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -8,4 +9,11 @@
   top: 0;
   right: 0;
   z-index: 1000;
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .header {
+    border: 5px solid rgb(243, 5, 5);
+    height: 100px;
+  }
 }
