--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -49,3 +49,18 @@
     background-image: url(../images/hero-original2.jpg);
   }
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .hero {
+    margin-top: 55px;
+    width: 100%;
+    height: 70vh;
+  }
+  .searchInput__wrapper .hero__search__input {
+    padding: 1.5rem;
+    font-size: 0.875rem;
+  }
+  .searchInput__wrapper > button {
+    padding: 1.5rem;
+  }
+}
