--- a/src/Styles/logo.css
+++ b/src/Styles/logo.css
@@ -5,3 +5,9 @@
 .logo img {
   max-width: 100%;
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .logo {
+    width: 35%;
+  }
+}
