--- a/src/Styles/pageHeader.css
+++ b/src/Styles/pageHeader.css
@@ -39,3 +39,12 @@
   background: var(--white);
   outline-color: var(--white);
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .page__header {
+    height: 80px;
+  }
+  .header__wrapper {
+    padding-bottom: 7rem;
+  }
+}
