--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -54,3 +54,11 @@ li {
 .page__background {
   margin-bottom: 3.125rem;
 }
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .page__background {
+    /* background: rgb(174, 42, 42); */
+    margin-bottom: 3.125rem;
+    padding: 0 60px;
+  }
+}
