--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -64,3 +64,9 @@
     padding: 1.5rem;
   }
 }
+@media only screen and (min-width: 1024px) {
+  .hero {
+    height: 80vh;
+    margin-top: 0px;
+  }
+}
