--- a/src/Styles/featuredRoom.css
+++ b/src/Styles/featuredRoom.css
@@ -31,3 +31,9 @@
     text-transform: capitalize;
   }
 }
+
+@media only screen and (min-width: 1024px) {
+  .room__list {
+    justify-content: space-evenly;
+  }
+}
