--- a/src/Styles/navLinks.css
+++ b/src/Styles/navLinks.css
@@ -14,3 +14,9 @@
   padding-top: 0.25rem;
   box-shadow: inset 0 0 5px rgb(170, 169, 169);
 }
+
+@media only screen and (min-width: 1024px) {
+  .nav__lists {
+    display: none;
+  }
+}
