--- a/src/Styles/footerLinkItem.css
+++ b/src/Styles/footerLinkItem.css
@@ -3,3 +3,9 @@
   font-family: var(--banner-regular-two);
   font-size: 0.8rem;
 }
+
+@media only screen and (min-width: 1024px) {
+  .footer__link__item {
+    color: #ffffff;
+  }
+}
