--- a/src/Styles/facility.css
+++ b/src/Styles/facility.css
@@ -7,3 +7,9 @@
   border: 0.5px solid rgb(189, 189, 189);
   border-radius: 3px;
 }
+
+@media only screen and (min-width: 1024px) {
+  .single__room__facility {
+    font-size: 16px;
+  }
+}
